--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "nodemon": "^2.0.18"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
